@@ -17,7 +17,6 @@ package org.hotswap.agent.javassist.bytecode.annotation;
 
 import org.hotswap.agent.javassist.ClassPool;
 import org.hotswap.agent.javassist.bytecode.ConstPool;
-
 import java.io.IOException;
 import java.lang.reflect.Method;
 
@@ -34,7 +33,7 @@ public class ByteMemberValue extends MemberValue {
      * Constructs a byte constant value.  The initial value is specified
      * by the constant pool entry at the given index.
      *
-     * @param index the index of a CONSTANT_Integer_info structure.
+     * @param index     the index of a CONSTANT_Integer_info structure.
      */
     public ByteMemberValue(int index, ConstPool cp) {
         super('B', cp);
@@ -44,7 +43,7 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Constructs a byte constant value.
      *
-     * @param b the initial value.
+     * @param b         the initial value.
      */
     public ByteMemberValue(byte b, ConstPool cp) {
         super('B', cp);
@@ -56,11 +55,11 @@ public class ByteMemberValue extends MemberValue {
      */
     public ByteMemberValue(ConstPool cp) {
         super('B', cp);
-        setValue((byte) 0);
+        setValue((byte)0);
     }
 
     Object getValue(ClassLoader cl, ClassPool cp, Method m) {
-        return new Byte(getValue());
+        return Byte.valueOf(getValue());
     }
 
     Class getType(ClassLoader cl) {
@@ -71,7 +70,7 @@ public class ByteMemberValue extends MemberValue {
      * Obtains the value of the member.
      */
     public byte getValue() {
-        return (byte) cp.getIntegerInfo(valueIndex);
+        return (byte)cp.getIntegerInfo(valueIndex);
     }
 
     /**
@@ -98,7 +97,7 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Accepts a visitor.
      */
-    public void accept(org.hotswap.agent.javassist.bytecode.annotation.MemberValueVisitor visitor) {
+    public void accept(MemberValueVisitor visitor) {
         visitor.visitByteMemberValue(this);
     }
 }
